@@ -1,3 +1,13 @@
+2008-07-25  Johan Dahlin  <johan@flumotion.com>
+
+	* flumotion/admin/gtk/main.py:
+	use trac syntax, add filename revisions
+	* flumotion/configure/configure.py:
+	add branchName
+	* flumotion/extern/exceptiondialog.py:
+	add new api to fetch all involved filenames,
+	refactor to avoid some duplication
+
 2008-07-24  Arek Korbik  <arkadini@gmail.com>
 
 	* flumotion/admin/gtk/dialogs.py:
